--- a/app/styles.css
+++ b/app/styles.css
@@ -7,6 +7,11 @@ body {
     font-weight: 300;
 }
 
+a {
+  outline: none;
+  text-decoration: none;
+}
+
 .app {
     margin-left: auto;
     margin-right: auto;
@@ -16,10 +21,43 @@ body {
 }
 
 .header {
+    display: flex;
     background-color: #ccc;
-    padding: 15px;
+}
+
+.header a {
+    color: #333;
+    padding-top: 15px;
+    padding-bottom: 12px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 10px;
+}
+
+.header a.active {
+    color: #333;
+    border-bottom-color: #333;
+    border-bottom-width: 5px;
+    border-bottom-style: inset;
+    margin-right: 10px;
+}
+
+.header a:hover {
+    color: #fff;
 }
 
 .main {
     padding: 15px;
+}
+
+.task-input input {
+    width: 100%;
+}
+
+.task-list {
+    margin-top: 15px;
+}
+
+.task-list .task-item {
+    padding: 5px;
 }
